# SPLN2324

./: README.md
TPC1/: Readme.md
TPC1/word_freq/: init.py
TPC2/: README.md  pyproject.toml
TPC2/tests/: commands.md
TPC2/word_freq/: __init__.py
TPC3/: METADATA.json  Readme.md  makepyproject.py  pyproject.toml
TPC4/: Readme.md
TPC5/: Readme.md  output.txt  proj.py
TPC6/: Readme.md  output.txt  proj.py
