
    [build-system]
    requires = ["flit_core >=3.2,<4"]
    build-backend = "flit_core.buildapi"

    [project]
    name = "makepyproject"
    authors = [
        {name = "fernas", email = "ferna2001@outlook.pt"}, number = "54470",
    ]
    version = "0.0.1"

    classifiers = [
        "License :: OSI Approved :: MIT License",
    ]
    requires-python = ">=3.8"
    dynamic = [ "description"]

    dependencies = [
        "jjcli",
        "jinja2"
    ]

    [project.scripts]
    makepyproject = "makepyproject:main"
    